--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,12 @@ cache:
   # cache it because it's too large:
   # - "c:\\Users\\appveyor\\AppData\\Local\\Programs\\stack"
 
+# Note: to reset build cache, do the following in JavaScript
+# console on appveyor:
+# $.ajax({
+#    url: 'https://ci.appveyor.com/api/projects/jgm/pandoc/buildcache',
+#    type: 'DELETE'})
+
 # We don't do a normal C build, but build in test_script via stack
 build: off
 
