appveyor.yml: added fast_finish, fails if either job fails.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,9 @@ environment:
     STACK_ROOT: "c:\\sr64"
     STACK: "%STACK_ROOT%\\stack.exe"
 
+matrix:
+  fast_finish: true
+
 cache:
   - "%STACK_ROOT%"
   - "%WIXBIN%"
