--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,9 @@ environment:
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK: "%STACK_ROOT%\\stack.exe"
-  - STACK_VERSION: "windows-x86_64"
-    STACK_ROOT: "c:\\sr64"
-    STACK: "%STACK_ROOT%\\stack.exe"
+#  - STACK_VERSION: "windows-x86_64"
+#    STACK_ROOT: "c:\\sr64"
+#    STACK: "%STACK_ROOT%\\stack.exe"
 
 matrix:
   fast_finish: true
