--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -280,6 +280,8 @@ Flag old-locale
 Library
   Build-Depends: base >= 4.7 && < 5,
                  syb >= 0.1 && < 0.8,
+                 split == 0.2.3.2,
+                 HUnit == 1.6.0.0,
                  containers >= 0.1 && < 0.6,
                  unordered-containers >= 0.2 && < 0.3,
                  parsec >= 3.1 && < 3.2,
