--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -584,6 +584,7 @@ benchmark benchmark-pandoc
   Build-Depends:   pandoc,
                    time, bytestring, containers,
                    base >= 4.2 && < 5,
+                   text >= 0.11 && < 1.3,
                    syb >= 0.1 && < 0.8,
                    criterion >= 1.0 && < 1.3
   Ghc-Options:   -rtsopts -Wall -fno-warn-unused-do-bind
