Mention muse reader in README, MANUAL, debian control, cabal description.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -18,8 +18,8 @@ Description:     Pandoc is a Haskell library for converting from one markup
                  this library. It can read several dialects of Markdown and
                  (subsets of) HTML, reStructuredText, LaTeX, DocBook,
                  MediaWiki markup, TWiki markup, Haddock markup, OPML,
-                 Emacs Org-Mode, txt2tags, Word Docx, ODT, and Textile, and
-                 it can write Markdown, reStructuredText, XHTML, HTML 5,
+                 Emacs Org-Mode, txt2tags, Muse, Word Docx, ODT, and Textile,
+                 and it can write Markdown, reStructuredText, XHTML, HTML 5,
                  LaTeX, ConTeXt, DocBook, JATS, OPML, TEI, OpenDocument, ODT,
                  Word docx, RTF, MediaWiki, DokuWiki, ZimWiki, Textile,
                  groff man, groff ms, plain text, Emacs Org-Mode, AsciiDoc,
