Added Vimwiki reader (#3705).
* New module Text.Pandoc.Readers.Vimwiki, exporting readVimwiki [API change].
* New input format `vimwiki`.
* New data file, `data/vimwiki.css`, for displaying the HTML produced by this reader and pandoc's HTML writer in the style of vimwiki's own HTML export.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -162,6 +162,7 @@ Extra-Source-Files:
                  test/markdown-citations.txt
                  test/textile-reader.textile
                  test/mediawiki-reader.wiki
+                 test/vimwiki-reader.wiki
                  test/rst-reader.rst
                  test/s5-basic.html
                  test/s5-fancy.html
@@ -368,6 +369,7 @@ Library
                    Text.Pandoc.Readers.Markdown,
                    Text.Pandoc.Readers.CommonMark,
                    Text.Pandoc.Readers.MediaWiki,
+                   Text.Pandoc.Readers.Vimwiki,
                    Text.Pandoc.Readers.RST,
                    Text.Pandoc.Readers.Org,
                    Text.Pandoc.Readers.DocBook,
