Travis: cabal build for ghc 8.2.1 RC.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,10 @@ matrix:
     compiler: ": #GHC 8.0.2"
     addons: {apt: {packages: [cabal-install-1.24,ghc-8.0.2,happy-1.19.5], sources: [hvr-ghc]}}
 
+  - env: BUILD=cabal GHCVER=8.2.1 CABALVER=1.24
+    compiler: ": #GHC 8.2.1"
+    addons: {apt: {packages: [cabal-install-1.24,ghc-8.2.1,happy-1.19.5], sources: [hvr-ghc]}}
+
   # Build with the newest GHC and cabal-install. This is an accepted failure,
   # see below.
   # - env: BUILD=cabal GHCVER=head  CABALVER=head
@@ -70,6 +74,7 @@ matrix:
 
   allow_failures:
   - env: BUILD=cabal GHCVER=head  CABALVER=head
+  - env: BUILD=cabal GHCVER=8.2.1 CABALVER=1.24
   - env: BUILD=stack ARGS="--resolver nightly"
 
   fast_finish: true
