Added TikiWiki support.
Added TikiWiki support, including tests and documentation.

It's probably not like *complete*, but it works pretty well, handles all
the basics (and some not-so-basics).

--- a/linux/control.in
+++ b/linux/control.in
@@ -13,13 +13,13 @@ Description: general markup converter
   format to another, and a command-line tool that uses
   this library. It can read several dialects of Markdown and
   (subsets of) HTML, reStructuredText, LaTeX, DocBook,
-  MediaWiki markup, TWiki markup, Haddock markup, OPML,
-  Emacs Org-Mode, txt2tags, Muse, Vimwiki, Word Docx, ODT,
-  and Textile, and it can write Markdown, reStructuredText,
-  XHTML, HTML 5, LaTeX, ConTeXt, DocBook, JATS, OPML, TEI,
-  OpenDocument, ODT, Word docx, RTF, MediaWiki, DokuWiki,
-  ZimWiki, Textile, groff man, groff ms, plain text,
-  Emacs Org-Mode, AsciiDoc, Haddock markup, EPUB (v2 and v3),
-  FictionBook2, InDesign ICML, Muse, and several kinds of
-  HTML/javascript slide shows (S5, Slidy, Slideous,
-  DZSlides, reveal.js).
+  MediaWiki markup, TWiki markup, TikiWiki markup, Haddock
+  markup, OPML, Emacs Org-Mode, txt2tags, Muse, Vimwiki,
+  Word Docx, ODT, and Textile, and it can write Markdown,
+  reStructuredText, XHTML, HTML 5, LaTeX, ConTeXt, DocBook,
+  JATS, OPML, TEI, OpenDocument, ODT, Word docx, RTF,
+  MediaWiki, DokuWiki, ZimWiki, Textile, groff man, groff
+  ms, plain text, Emacs Org-Mode, AsciiDoc, Haddock markup,
+  EPUB (v2 and v3), FictionBook2, InDesign ICML, Muse, and
+  several kinds of HTML/javascript slide shows (S5, Slidy,
+  Slideous, DZSlides, reveal.js).
