Revert "Travis: try not caching .ghc."
This reverts commit 434309802ca86b1862dae4ebf47fd4904876c522.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ language: generic
 # Caching so the next build will be fast too.
 cache:
   directories:
-#  - $HOME/.ghc
+  - $HOME/.ghc
   - $HOME/.stack
 # - $HOME/.cabal
 
