Revert "Travis: Try not caching .cabal."
This reverts commit 5370c38203c1084d7f81abe582ebfec06ebc7d79.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ language: generic
 cache:
   directories:
   - $HOME/.ghc
+  - $HOME/.cabal
   - $HOME/.stack
-# - $HOME/.cabal
 
 # The different configurations we want to test. We have BUILD=cabal which uses
 # cabal-install, and BUILD=stack which uses Stack. More documentation on each
