--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -321,6 +321,7 @@ Library
                  JuicyPixels >= 3.1.6.1 && < 3.3,
                  Glob >= 0.7 && < 0.8,
                  cmark >= 0.5 && < 0.6,
+                 cmark-gfm >= 0.1.1 && < 0.2,
                  doctemplates >= 0.1 && < 0.2,
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
@@ -370,6 +371,7 @@ Library
                    Text.Pandoc.Readers.LaTeX.Types,
                    Text.Pandoc.Readers.Markdown,
                    Text.Pandoc.Readers.CommonMark,
+                   Text.Pandoc.Readers.GFM,
                    Text.Pandoc.Readers.MediaWiki,
                    Text.Pandoc.Readers.Vimwiki,
                    Text.Pandoc.Readers.RST,
@@ -401,6 +403,7 @@ Library
                    Text.Pandoc.Writers.Ms,
                    Text.Pandoc.Writers.Markdown,
                    Text.Pandoc.Writers.CommonMark,
+                   Text.Pandoc.Writers.GFM,
                    Text.Pandoc.Writers.Haddock,
                    Text.Pandoc.Writers.RST,
                    Text.Pandoc.Writers.Org,
