Don't put fancy warnings in pandoc.cabal ghc-options.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -344,7 +344,7 @@ Library
      other-modules: Text.Pandoc.Data
   if os(windows)
     Cpp-options:      -D_WINDOWS
-  Ghc-Options:   -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-unused-do-bind
+  Ghc-Options:   -Wall -fno-warn-unused-do-bind
   Ghc-Prof-Options: -fprof-auto-exported
   Default-Language: Haskell98
   Other-Extensions:   PatternGuards, OverloadedStrings,
