--- a/stack.yaml
+++ b/stack.yaml
@@ -9,6 +9,7 @@ packages:
 extra-deps:
 - hslua-0.5.0
 - skylighting-0.3.3
-- texmath-0.9.4.1
 - cmark-gfm-0.1.1
-resolver: lts-8.16
+- QuickCheck-2.10.0.1
+- tasty-quickcheck-0.9.1
+resolver: lts-9.0
