--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -324,7 +324,8 @@ Library
                  doctemplates >= 0.1 && < 0.2,
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
-                 http-types >= 0.8 && < 0.10
+                 http-types >= 0.8 && < 0.10,
+                 csv-conduit >= 0.6 && < 0.7
   if os(windows)
     Cpp-options:      -D_WINDOWS
   else
@@ -465,6 +466,7 @@ Library
                    Text.Pandoc.Lua.StackInstances,
                    Text.Pandoc.Lua.Util,
                    Text.Pandoc.CSS,
+                   Text.Pandoc.CSV,
                    Text.Pandoc.UUID,
                    Text.Pandoc.BCP47
                    Text.Pandoc.Slides,
