--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -135,6 +135,7 @@ Extra-Source-Files:
                  test/bodybg.gif
                  test/*.native
                  test/command/*.md
+                 test/command/3533-rst-csv-tables.csv
                  test/command/abbrevs
                  test/command/SVG_logo-without-xml-declaration.svg
                  test/command/SVG_logo.svg
