Docx writer:  pass through comments.
We assume that comments are defined as parsed by the
docx reader:

    I want <span class="comment-start" id="0" author="Jesse Rosenthal"
    date="2016-05-09T16:13:00Z">I left a comment.</span>some text to
    have a comment <span class="comment-end" id="0"></span>on it.

We assume also that the id attributes are unique and properly
matched between comment-start and comment-end.

Closes #2994.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -138,6 +138,7 @@ Extra-Source-Files:
                  test/*.native
                  test/command/*.md
                  test/command/3533-rst-csv-tables.csv
+                 test/command/2994.docx
                  test/command/abbrevs
                  test/command/SVG_logo-without-xml-declaration.svg
                  test/command/SVG_logo.svg
