Ensure hslua is build for 32 bits on windows i386
This prevents some otherwise hard to find and hard miscalculations in
lua filters.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,13 +3,16 @@ environment:
   global:
     WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
     STACK_YAML: "c:\\pandoc\\stack.pkg.yaml"
+    STACK_BUILD_OPTS: "-j1 --no-terminal --test --local-bin-path=.\\windows"
   matrix:
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK: "%STACK_ROOT%\\stack.exe"
+    STACK_FLAGS: "--flag=hslua:lua_32bits"
 #  - STACK_VERSION: "windows-x86_64"
 #    STACK_ROOT: "c:\\sr64"
 #    STACK: "%STACK_ROOT%\\stack.exe"
+#    STACK_FLAGS: ""
 
 matrix:
   fast_finish: true
@@ -44,7 +47,7 @@ test_script:
       %STACK% setup > nul
       %STACK% path
       echo "" | %STACK% clean
-      echo "" | %STACK% -j1 --no-terminal --test --local-bin-path=.\windows install pandoc pandoc-citeproc
+      echo "" | %STACK% %STACK_BUILD_OPTS% install pandoc pandoc-citeproc %STACK_FLAGS%
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
