--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -301,6 +301,7 @@ Library
                  HTTP >= 4000.0.5 && < 4000.4,
                  texmath >= 0.9.4.1 && < 0.10,
                  xml >= 1.3.12 && < 1.4,
+                 split >= 0.2 && < 0.3,
                  random >= 1 && < 1.2,
                  pandoc-types >= 1.17 && < 1.18,
                  aeson >= 0.7 && < 1.3,
