--- a/.travis.yml
+++ b/.travis.yml
@@ -81,6 +81,21 @@ matrix:
 before_install:
 # Using compiler above sets CC to an invalid value, so unset it
 - unset CC
+# shutdown servies on Travis, which may have a memory impact
+# show memory usage before and after shutdown of services
+- sudo service --status-all
+- sudo free -m -t
+- sudo /etc/init.d/mysql stop
+- sudo /etc/init.d/postgresql stop
+- sudo /etc/init.d/couchdb stop
+- sudo /etc/init.d/redis-server stop
+- sudo free -m -t
+
+after_failure:
+# show memory usage again
+- sudo free -m -t
+# show actions of the OOM killer
+- sudo dmesg
 
 # We want to always allow newer versions of packages when building on GHC HEAD
 - CABALARGS=""
