Name change OSX -> macOS
fix commit c96b64e

This commit finishes remaining osx to macOS change, as well as replacing MacOS with macOS.

The reason for the later one is because the "correct" casing of macOS is like that. Apple styles it to looks like iOS, watchOS, tvOS, etc. And unfortunately they all start with a lowercase letter, making propercasing (or even title-casing) odd.

--- a/stack.full.yaml
+++ b/stack.full.yaml
@@ -9,7 +9,7 @@ flags:
   pandoc-citeproc:
     bibutils: true
     embed_data_files: true
-# if you are on OSX, stack install cpphs and
+# if you are on macOS, stack install cpphs and
 # uncomment the following three lines:
 ghc-options:
   pandoc-citeproc:  '-pgmP cpphs -optP--cpp'
