Relaxed version bounds.

--- a/stack.full.yaml
+++ b/stack.full.yaml
@@ -21,5 +21,5 @@ packages:
 - '../pandoc-types'
 - '../texmath'
 extra-deps:
-- doctemplates-0.1.0.2
-resolver: lts-7.5
+- pandoc-types-1.17.0.5
+resolver: lts-9.2
