--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -1,5 +1,5 @@
 Name:            pandoc
-Version:         1.19.2.3
+Version:         1.19.2.4
 Cabal-Version:   >= 1.10
 Build-Type:      Custom
 License:         GPL
@@ -439,6 +439,8 @@ Executable pandoc
                  aeson >= 0.7.0.5 && < 1.2,
                  yaml >= 0.8.8.2 && < 0.9,
                  containers >= 0.1 && < 0.6,
+                 skylighting >= 0.1.1.4 && < 0.2,
+                 texmath >= 0.9 && < 0.10,
                  HTTP >= 4000.0.5 && < 4000.4
   if flag(network-uri)
      Build-Depends: network-uri >= 2.6 && < 2.7, network >= 2.6
