--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,11 @@ matrix:
   #   compiler: ": #stack nightly osx"
   #   os: osx
 
+  # allow 8.0.2 cabal build to fail; it times out
   allow_failures:
   - env: BUILD=cabal GHCVER=head  CABALVER=head
   - env: BUILD=stack ARGS="--resolver nightly"
+  - env: BUILD=cabal GHCVER=8.0.2 CABALVER=1.24 OPTS="-O0 -Wall -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-unused-do-bind -Werror" FLAGS="fast" CABALARGS=""
 
   fast_finish: true
 
