--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ test_script:
       %STACK% setup > nul
       %STACK% path
       echo "" | %STACK% clean
-      echo "" | %STACK% %STACK_BUILD_OPTS% install %STACK_FLAGS%
+      echo "" | %STACK% %STACK_BUILD_OPTS% install pandoc pandoc-citeproc %STACK_FLAGS%
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
