.travis.yml tweaks: use ulimit, --ghc-options for cabal build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -113,10 +113,9 @@ install:
       stack --no-terminal --install-ghc $ARGS build --only-dependencies --fast --flag 'pandoc:embed_data_files' --flag 'aeson:fast'
       ;;
     cabal)
+      ulimit -n 4096
       cabal --version
-      date
       travis_retry cabal update
-      date
       cabal install -j --only-dependencies --flags="$FLAGS" --enable-tests --force-reinstalls --ghc-options="-O0" --reorder-goals --max-backjumps=-1 $CABALARGS
       ;;
   esac
@@ -129,12 +128,11 @@ script:
       stack --no-terminal $ARGS test --flag 'aeson:fast' --flag pandoc:embed_data_files --haddock --no-haddock-deps --ghc-options="$OPTS"
       ;;
     cabal)
-      date && \
+      ulimit -n 4096
       cabal sdist --output-directory=sourcedist && \
       cd sourcedist && \
       cabal configure --enable-tests -v2 --flags="$FLAGS" --ghc-options="$OPTS" $CABALARGS && \
-      cabal build && \
-      date && \
+      cabal build --ghc-options="$OPTS" && \
       cabal test
       ;;
   esac
